Actions
Bug #21014
closedPrism doesn't set node_id on iseqs correctly
Bug #21014:
Prism doesn't set node_id on iseqs correctly
Description
Given this code:
Output on parse.y:
Output on Prism:
I don't expect node IDs on Prism to match parse.y, but I do expect the node id to be a legitimate node id. For example, this program should work:
Updated by tenderlovemaking (Aaron Patterson) over 1 year ago
Fix sent here: https://github.com/ruby/ruby/pull/12527
Updated by tenderlovemaking (Aaron Patterson) over 1 year ago
- Status changed from Open to Closed
Applied in changeset git|63723c8d5908569918fb27e070ae5bc9de33c8bd.
Correctly set node_id on iseq location
The iseq location object has a slot for node ids. parse.y was correctly
populating that field but Prism was not. This commit populates the field
with the ast node id for that iseq
[Bug #21014]
Updated by kddnewton (Kevin Newton) over 1 year ago
- Backport changed from 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: UNKNOWN to 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: REQUIRED
Updated by k0kubun (Takashi Kokubun) over 1 year ago
- Backport changed from 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: REQUIRED to 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: DONE
ruby_3_4 9240f01b1fbe5ea4f6a2017d35f8f605f84f0039 merged revision(s) 63723c8d5908569918fb27e070ae5bc9de33c8bd.
Updated by nagachika (Tomoyuki Chikanaga) over 1 year ago
- Backport changed from 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: DONE to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: DONE
Actions